--- a/_faq/covid19/025_vac.md
+++ b/_faq/covid19/025_vac.md
@@ -4,15 +4,16 @@ ldjson: yes
 hashtag: vac
 ---
 
-### Одобрены  для программ Test and Go / «Песочница» 
-  * CoronaVac Sinovac 2 doses
-  * AstraZeneca / Covishield  2 doses
-  * Pfizer BioNTech 2 doses
-  * Janssen Johnson&Johnson
-  * Moderna  2 doses
-  * COVILO Sinopharm  2 doses
-  * Sputnik V - 2 doses
-  * Covaxin Bharat Biotech  2 doses
-
-### Одобрены только для программы «Песочница» 
-  * Sputnik Light  1 dose
+### Одобренные вакцины
+ *CoronaVac (Sinovac) – 2 дозы
+ *AstraZeneca (Vaxzevria, Covishield) – 2 дозы
+ *Pfizer-BioNTech (Comirnaty, Tozinameran (INN)) – 2 дозы
+ *Janssen (Johnson & Johnson) – 1 доза
+ *Moderna (Spikevax) – 2 дозы
+ *COVILO (Sinopharm) – 2 дозы
+ *Sputnik V – 2 дозы
+ *Covaxin – 2 дозы
+ *Novavax (Nuvaxovid) / Covovax – 2 дозы
+ *Medigen – 2 дозы
+ 
+ *Sputnik Light (Только для программы Sandbox!) – 1 доза
