--- a/_faq/covid19/025_vac.md
+++ b/_faq/covid19/025_vac.md
@@ -5,15 +5,15 @@ hashtag: vac
 ---
 
 ### Одобренные вакцины
- *CoronaVac (Sinovac) – 2 дозы
- *AstraZeneca (Vaxzevria, Covishield) – 2 дозы
- *Pfizer-BioNTech (Comirnaty, Tozinameran (INN)) – 2 дозы
- *Janssen (Johnson & Johnson) – 1 доза
- *Moderna (Spikevax) – 2 дозы
- *COVILO (Sinopharm) – 2 дозы
- *Sputnik V – 2 дозы
- *Covaxin – 2 дозы
- *Novavax (Nuvaxovid) / Covovax – 2 дозы
- *Medigen – 2 дозы
+ *CoronaVac (Sinovac) – 2 дозы;
+ *AstraZeneca (Vaxzevria, Covishield) – 2 дозы;
+ *Pfizer-BioNTech (Comirnaty, Tozinameran (INN)) – 2 дозы;
+ *Janssen (Johnson & Johnson) – 1 доза;
+ *Moderna (Spikevax) – 2 дозы;
+ *COVILO (Sinopharm) – 2 дозы;
+ *Sputnik V – 2 дозы;
+ *Covaxin – 2 дозы;
+ *Novavax (Nuvaxovid) / Covovax – 2 дозы;
+ *Medigen – 2 дозы;
  
- *Sputnik Light (Только для программы Sandbox!) – 1 доза
+ *Sputnik Light (Только для программы Sandbox!) – 1 доза.
